# matalgo

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixAlgo.cpp  MatrixAlgoConfig.h.in  README.md  build.sh  main.cpp
Matrix/: Matrix.cpp  Matrix.hpp
utils/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixError.hpp
